--- a/ansible_collections/rangeid/icinga/test/test-playbook-service-failed.yaml
+++ b/ansible_collections/rangeid/icinga/test/test-playbook-service-failed.yaml
@@ -1,7 +1,7 @@
 - name: "test-playbook | Set Maintenance"
   hosts: localhost
   tasks:
-    - name: "test-playbook | Set Maintenance for the node and services by list"
+    - name: "test-playbook | Set Maintenance for the node and services by list, retry 1, timeout 2"
       rangeid.icinga.maintenance:
         icinga_server: "{{ lookup('ansible.builtin.env', 'ICINGA_SERVER') }}"
         icinga_username: "{{ lookup('ansible.builtin.env', 'ICINGA_USERNAME') }}"
@@ -11,9 +11,20 @@
         duration: "1m 30s"
         hostname: "EQS-CA"
         message: "Partial"
-        check_before: true
-        stop_on_failed_service: true
-      register: one
+        check_before:
+          enabled: true
+          stop_on_failed_service: true
+          retries: 1
+          timeout: 2
+      register: ret
+      ignore_errors: true
 
-    - debug:
-        msg: "{{ one }}"
+    - name: "test-playbook | Dump result"
+      ansible.builtin.debug:
+        msg: "{{ ret }}"
+
+    - name: "test-playbook | evaluate test"
+      ansible.builtin.assert:
+        that: ret.failed == True
+        fail_msg: "Result not expected"
+        success_msg: "Result as expected"
